# OctoPredict

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: leagues.py  matches.py  predictions.py  stats.py  teams.py
backend/app/db/: init_db.py  session.py
backend/app/ml/: evaluator.py  features.py  model.py  model_store.py  trainer.py
backend/app/models/: __init__.py  elo_rating.py  job_log.py  match.py  prediction.py  team.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: match.py  prediction.py  stats.py  team.py
backend/app/services/: data_sync.py  elo_service.py  football_api.py  prediction_service.py
backend/app/utils/: logging.py  rate_limiter.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/leagues/[code]/: page.tsx
frontend/src/app/predictions/: page.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/leagues/: LeagueSelector.tsx  StandingsTable.tsx
frontend/src/components/matches/: MatchCard.tsx  PredictionBar.tsx  TeamFormStrip.tsx
frontend/src/components/stats/: AccuracyChart.tsx  ModelMetricsCard.tsx
frontend/src/hooks/: useLeagueStats.ts  useMatches.ts  usePredictions.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
(+2 files in other folders)
